--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "proxy": "http://localhost:5050",
+  "proxy": "https://enigmatic-fjord-71581.herokuapp.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
