--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy":"https:me.martin.com",
   "name": "client",
   "proxy": "https://enigmatic-fjord-71581.herokuapp.com",
   "version": "0.1.0",
